--- a/index.html
+++ b/index.html
@@ -1,186 +1,210 @@
+!
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>H5和C3</title>
-  <style>
-    video{
-      width: 600px;
-      height: 400px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>H5和C3</title>
+    <style>
+        video {
+            width: 600px;
+            height: 400px;
+        }
+    </style>
 </head>
+
 <body>
-  h5新语义化标签<a target="_blank" href="https://upload-images.jianshu.io/upload_images/24830130-1f0015a8c3ac0454.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">查看属性</a>
-  <hr>
-  <video  controls src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/812358b69886e576c66a01f1f00affe9.mp4"></video>
-  <br>
-  自动播放 显示控件<a target="_blank" href="https://upload-images.jianshu.io/upload_images/24830130-f811e70c21a06f98.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">查看属性</a>
-  <br>
-  <audio  controls src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/812358b69886e576c66a01f1f00affe9.mp4"></audio>
-  <br>
-  自动播放 显示控件<a target="_blank" href="https://upload-images.jianshu.io/upload_images/24830130-26bbc6d3742ae518.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">查看属性</a>
-  <hr>
-  h5新增input类型<a target="_blank" href="https://upload-images.jianshu.io/upload_images/24830130-089a8805dc41885f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">查看属性</a>
-  <hr>
-  h5新表单属性<a target="_blank" href="https://upload-images.jianshu.io/upload_images/24830130-3899fd9c963c9a63.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">查看属性</a>
-  <hr>
-  <p>2d转换transform</p>
-  <div class="twod1">translate平移了</div>
-  <div class="twod2">rotate旋转了</div>
-  <div class="twod3">scale伸缩了</div>
-  <div class="twod4">rotate旋转了origin更改中心</div>
-  <hr>
-  <p>动画</p>
-  <div class="donghua"></div>
-  <a href="https://upload-images.jianshu.io/upload_images/24830130-7508bf97ff34b041.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" target="_blank">动画常用属性</a>
-  <hr>
-  <p>transition过度</p>
-  <div class="gd"></div>
-  <a href="https://upload-images.jianshu.io/upload_images/24830130-de9050e387576d53.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" target="_blank">了解更多</a>
-  <hr>
-  <p>3d转换</p>
-  <div class="d3"></div>
-  <div class="d32"></div>
+    h5新语义化标签<a target="_blank" href="http://bed3.52xhl.top/202207131652975.png">查看属性</a>
+    <hr>
+    <video controls src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/812358b69886e576c66a01f1f00affe9.mp4"></video>
+    <br>
+    自动播放 显示控件<a target="_blank" href="http://bed3.52xhl.top/202207131653437.png">查看属性</a>
+    <br>
+    <audio controls src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/812358b69886e576c66a01f1f00affe9.mp4"></audio>
+    <br>
+    自动播放 显示控件<a target="_blank" href="http://bed3.52xhl.top/202207131653792.png">查看属性</a>
+    <hr>
+    h5新增input类型<a target="_blank" href="http://bed3.52xhl.top/202207131654592.png">查看属性</a>
+    <hr>
+    h5新表单属性<a target="_blank" href="http://bed3.52xhl.top/202207131654426.png">查看属性</a>
+    <hr>
+    <p>2d转换transform</p>
+    <div class="twod1">translate平移了</div>
+    <div class="twod2">rotate旋转了</div>
+    <div class="twod3">scale伸缩了</div>
+    <div class="twod4">rotate旋转了origin更改中心</div>
+    <hr>
+    <p>动画</p>
+    <div class="donghua"></div>
+    <a href="http://bed3.52xhl.top/202207131654835.png" target="_blank">动画常用属性</a>
+    <hr>
+    <p>transition过度</p>
+    <div class="gd"></div>
+    <a href="http://bed3.52xhl.top/202207131655399.png" target="_blank">了解更多</a>
+    <hr>
+    <p>3d转换</p>
+    <div class="d3"></div>
+    <div class="d32"></div>
 
 
 </body>
 <style>
-  /* css3 */
-  input[value]{
-    color: red;
-    /* 选中input中有value的 */
-  }
-  input[type=text]{
-    color: pink;
-    /* 选中input中type是text的 */
-  }
-  input[name^=text]{
-    color: pink;
-    /* 选中input中name是text开头的 */
-  }
-  input[name$=text]{
-    color: pink;
-    /* 选中input中name是text结尾的 */
-  }
-  input[name*=text]{
-    color: pink;
-    /* 选中input中name是包含text的 */
-  }
-  li:first-child{
-    color: red;
-    /* 选中li中第一个元素 */
-  }
-  li:last-child{
-    color: red;
-    /* 选中li中最后一个元素 */
-  }
-  li:nth-child(2){
-    color: red;
-    /* 可以是even偶数  odd奇数 公式，如2n（奇数） 2n+1（偶数） 5n（5 10 15） n+5（从第五个开始到最后） -n+5 （前五个）*/
-    /* 选中li中第二个元素 */
-  }
-  li:nth-of-type(2){
-    color: red;
-    /* 有点区别 这个好用一点*/
-  }
-  div::after{
-    content: "";
-    /* 必须有这个属性，注意加上的是行内元素 */
-  }
-  .tudou:hover::before{
-    color: red;
-    /* 鼠标经过tudou显示before 
+    /* css3 */
+    input[value] {
+        color: red;
+        /* 选中input中有value的 */
+    }
+
+    input[type=text] {
+        color: pink;
+        /* 选中input中type是text的 */
+    }
+
+    input[name^=text] {
+        color: pink;
+        /* 选中input中name是text开头的 */
+    }
+
+    input[name$=text] {
+        color: pink;
+        /* 选中input中name是text结尾的 */
+    }
+
+    input[name*=text] {
+        color: pink;
+        /* 选中input中name是包含text的 */
+    }
+
+    li:first-child {
+        color: red;
+        /* 选中li中第一个元素 */
+    }
+
+    li:last-child {
+        color: red;
+        /* 选中li中最后一个元素 */
+    }
+
+    li:nth-child(2) {
+        color: red;
+        /* 可以是even偶数  odd奇数 公式，如2n（奇数） 2n+1（偶数） 5n（5 10 15） n+5（从第五个开始到最后） -n+5 （前五个）*/
+        /* 选中li中第二个元素 */
+    }
+
+    li:nth-of-type(2) {
+        color: red;
+        /* 有点区别 这个好用一点*/
+    }
+
+    div::after {
+        content: "";
+        /* 必须有这个属性，注意加上的是行内元素 */
+    }
+
+    .tudou:hover::before {
+        color: red;
+        /* 鼠标经过tudou显示before 
     box-sizing: border-box;  怪异盒子模型，包含边框
     filter: blur(5px);图片模糊处理
     width:calc(100%-30px);
     */
-  }
+    }
 
-  /* 2d转换transform
+    /* 2d转换transform
 
    */
-   .twod1{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    transform: translate(300px,30px);
-   }
-   .twod2{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    transform: rotate(30deg);
-   }
-   .twod3{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    transform: scale(1,1.5);
-   }
-   .twod4{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    transform: rotate(30deg);
-    transform-origin: 10px 10px;
-   }
-   .donghua{
-     width: 100px;
-     height: 100px;
-     background-color: red;
-     animation-name: donghua;
-     animation-duration: 3s;
-   }
+    .twod1 {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        transform: translate(300px, 30px);
+    }
 
-   @keyframes donghua
-   {
-     0% {
-       width: 100;
-       background-color: red;
-     }
-     100% {
-       width: 200px;
-       background-color: #fff;
-       }
-   }
-   .gd{
-     width: 100px;
-     height: 100px;
-     background-color: pink;
-     transition: width 1s linear 0s;
-     /* 属性 时间 运动曲线 何时开始 */
-   }
-   .gd:hover{
-     width: 400px;
-   }
-   body{
-    perspective: 500px;
-     /* 开启透视，透视相当于人眼和物体的距离，距离越小看东西越大 
+    .twod2 {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        transform: rotate(30deg);
+    }
+
+    .twod3 {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        transform: scale(1, 1.5);
+    }
+
+    .twod4 {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        transform: rotate(30deg);
+        transform-origin: 10px 10px;
+    }
+
+    .donghua {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        animation-name: donghua;
+        animation-duration: 3s;
+    }
+
+    @keyframes donghua {
+        0% {
+            width: 100;
+            background-color: red;
+        }
+
+        100% {
+            width: 200px;
+            background-color: #fff;
+        }
+    }
+
+    .gd {
+        width: 100px;
+        height: 100px;
+        background-color: pink;
+        transition: width 1s linear 0s;
+        /* 属性 时间 运动曲线 何时开始 */
+    }
+
+    .gd:hover {
+        width: 400px;
+    }
+
+    body {
+        perspective: 500px;
+        /* 开启透视，透视相当于人眼和物体的距离，距离越小看东西越大 
       透视要给父元素开启
      */
-      
-   }
-   .d3{
-     width: 200px;
-     height: 200px;
-     background-color: pink;
-     transform: translate3d(200px,-100px,30px);
-   }
-   .d32{
-     width: 200px;
-     height: 200px;
-     background-color: pink;
-     transition: all 1s;
-     
-   }
-   .d32:hover{
-    transform: rotateX(180deg);
-  
-   }
-   /* transform: rotate3d(x,y,z,deg)
+
+    }
+
+    .d3 {
+        width: 200px;
+        height: 200px;
+        background-color: pink;
+        transform: translate3d(200px, -100px, 30px);
+    }
+
+    .d32 {
+        width: 200px;
+        height: 200px;
+        background-color: pink;
+        transition: all 1s;
+
+    }
+
+    .d32:hover {
+        transform: rotateX(180deg);
+
+    }
+
+    /* transform: rotate3d(x,y,z,deg)
       3d旋转，了解即可
     */
     /* 
@@ -188,8 +212,6 @@
       需要给父盒子设置
       transform-style: preserve-3d;
      */
-
-  
-
 </style>
+
 </html>
