--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    SEO优化标签<a target="_blank" href="http://bed3.52xhl.top/202207132245223.png">查看属性</a>
+    ico图标<a target="_blank" href="http://bed3.52xhl.top/202207132246993.png">查看属性</a>
     h5新语义化标签<a target="_blank" href="http://bed3.52xhl.top/202207131652975.png">查看属性</a>
     <hr>
     <video controls src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/812358b69886e576c66a01f1f00affe9.mp4"></video>
